--- a/draft/index/style.css
+++ b/draft/index/style.css
@@ -36,20 +36,49 @@ form#login-form.form-inline{
 }
 
 #email{
-    position: relative;
-    left: 250px;
+    position: absolute;
+    right: 598px;
+    z-index: 1;
+    top: 13px;
+}
 
+img#blockly-input{
+    position: absolute;
+    right: 300px;
+    top:4px;
+    z-index: 0;
 }
 
 #password{
-    position: relative;
-    left: 210px;
-    bottom: 48px;
+    /* position: relative;
+    right: 275px; */
+    /* bottom: 43px;  */
+    position: absolute;
+    right: 410px;
+    top: 13px;
     width: 160px;
 }
 
-#login-summit{
-    position: relative;
-    left: 310px;
-    bottom: 47px;
+
+#login{
+    background: rgb(241, 237, 2);
+    color: black;
+    margin-right: 0px;
+}
+
+#fast-login-fb{
+    margin-left: 15px;
+}
+
+div.login-button{
+    /* position: relative;
+    right: 260px; */
+    position: absolute;
+    top: 3px;
+    right: 20px;
+    
+}
+
+.rightSide input{
+    border-radius: 3px;
 }
