--- a/draft/index/style.css
+++ b/draft/index/style.css
@@ -1,14 +1,19 @@
+html{
+    height: 100%
+}
+
 body{
     margin: 0%;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 div.header{
     text-align: center;
     height: 60px;
 }
-div#header{
-    
-}
+
 a{
     color: black
 }
@@ -84,10 +89,19 @@ div.login-button{
     border-radius: 3px;
 }
 
-body div#container{
-    margin: 10px auto;
 
+#container{
+    margin-top: 0px;
+    margin-bottom: 0px;
+
+    flex: 1;
 }
-.row{
-    
+
+footer{
+    padding: 0 25px;
+    background-color: #00adbc;
+    height: auto;
+    z-index: 10;
+    /* position: relative; */
+    margin-top: -100px;
 }
