--- a/draft/index/style.css
+++ b/draft/index/style.css
@@ -1,5 +1,6 @@
 html{
-    height: 100%
+    height: 100%;
+    
 }
 
 body{
@@ -7,6 +8,7 @@ body{
     min-height: 100%;
     display: flex;
     flex-direction: column;
+    overflow: scroll;
 }
 
 div.header{
@@ -34,9 +36,10 @@ form#login-form.form-inline{
 }
 .header .leftSide{
     text-align: left;
-    position: absolute;
-    left: 10px;
-    width: 500px;
+    /* position: absolute; */
+    /* left: 10px;
+    width: 500px; */
+    float: left;
 }
 
 
@@ -93,7 +96,8 @@ div.login-button{
 #container{
     margin-top: 0px;
     margin-bottom: 0px;
-
+    height: 600px;
+    overflow: hidden;
     flex: 1;
 }
 
