--- a/Test/templates/index.html
+++ b/Test/templates/index.html
@@ -37,10 +37,18 @@
         </div>
 
         <div class="form-row">
-            <div class="form-group col-md-6">
-                <label for="inputPassword4">Password</label>
-                <input type="password" class="form-control" id="inputPassword4" placeholder="Password" name="password">
+            <div class="form-group col-md-6" id="password">
+                <label for="inputPassword">Password</label>
+                <input type="password" class="form-control" id="inputPassword" placeholder="Password" name="password">
+                
             </div>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group col-md-6" id="password-again">
+              <label for="inputPasswordagain">Input Password Again</label>
+              <input type="password" class="form-control" id="inputPasswordagain" placeholder="Password" name="password-again" style="background-color:white;">
+          </div>
         </div>
         
         <div class="form-row">
