finish repeat register check

--- a/Test/templates/index.html
+++ b/Test/templates/index.html
@@ -17,20 +17,20 @@
         <input type="submit" name="" id="">
     </form> -->
     <form action="" method="post" style="margin-left:5em">
-        <div class="form-row">
-            <div class="form-group col-md-6">
+        <div class="form-row" >
+            <div class="form-group col-md-6" id="name">
                 <label for="inputName">Name</label>
                 <input type="text" class="form-control" id="inputName" placeholder="Name" name="name">
             </div>
         </div>
         <div class="form-row">
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-6" id="ID">
                 <label for="inputID">ID</label>
                 <input type="text" class="form-control" id="inputID" placeholder="ID" name="ID">
             </div>
         </div>
         <div class="form-row">
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-6" id="Email">
                 <label for="inputEmail">Email</label>
                 <input type="email" class="form-control" id="inputEmail" placeholder="Email" name="email">
             </div>
