--- a/Test/static/style.css
+++ b/Test/static/style.css
@@ -1,5 +1,11 @@
+html{
+    height:100%;
+}
 body{
     margin: 0px;
+    display: grid;
+    grid-template-rows: auto auto auto;
+    height: 100%;
 }
 
 .header{
@@ -184,12 +190,17 @@ body{
 }
 
 .footer{
+    /* position: absolute;
+    bottom: 0; */
+    /* margin-top: -50px; */
     box-sizing: border-box;
     padding: 10px;
     width: 100%;
     background-color: #00adbc;
-    height: 60px;
+    height: auto;
     font-size: 12px;
+    grid-row-start: 3;
+    grid-row-end: 4;
 }
 
 .footer a{
