--- a/Test/templates/header.html
+++ b/Test/templates/header.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../../static/index/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    
-    <title>Draft</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/header.css">
+    <title>Document</title>
 </head>
 <body>
     <div class="header">
@@ -19,7 +17,8 @@
         <div id="right-side">
             <a class="normal "href="">首頁</a>
             <a class="normal" href="">我的迪摩</a>
-            <a class="normal"href="">登出</a>
+            <a class="normal"href="">登入</a>
+            <a class="normal" href="">註冊</a>
             <div id="setting-dropdown-div">
                 <button class="dropdown-btn" id="setting">設定
                     <i class="fa fa-caret-down"></i>
@@ -32,26 +31,21 @@
             </div>
         </div>
     </div>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<script src="../../static/index/index.js"></script>
 <script>
 var dropdown = document.getElementsByClassName("dropdown-btn");
 var i;
 
 for (i = 0; i < dropdown.length; i++) {
-  dropdown[i].addEventListener("click", function() {
+    dropdown[i].addEventListener("click", function() {
     var dropdownContent = this.nextElementSibling;
     if (dropdownContent.style.display === "block") {
-      dropdownContent.style.display = "none";
+        dropdownContent.style.display = "none";
     } else {
-      dropdownContent.style.display = "block";
+        dropdownContent.style.display = "block";
     }
-  });
+    });
 }
+            
 </script>
 </body>
-<footer>
-</footer>
 </html>
