--- a/Test/templates/header.html
+++ b/Test/templates/header.html
@@ -5,47 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/header.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js" ></script>
+    <!-- <link rel="stylesheet" href="../static/header.css"> -->
     <title>Document</title>
 </head>
 <body>
-    <div class="header">
-        <div id="left-side">
-            <p id="title">Debugamo : 幫幫迪摩</p>
-        </div>
-        <div id="mid"></div>
-        <div id="right-side">
-            <a class="normal "href="">首頁</a>
-            <a class="normal" href="">我的迪摩</a>
-            <a class="normal"href="">登入</a>
-            <a class="normal" href="">註冊</a>
-            <div id="setting-dropdown-div">
-                <button class="dropdown-btn" id="setting">設定
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-container">
-                    <a href="" class="dropdown-option">遊戲設定</a>
-                    <a href="" class="dropdown-option">個人資料設定</a>
-                    <a href="" class="dropdown-option">選項2</a>
-                </div>
-            </div>
-        </div>
-    </div>
-<script>
-var dropdown = document.getElementsByClassName("dropdown-btn");
-var i;
 
-for (i = 0; i < dropdown.length; i++) {
-    dropdown[i].addEventListener("click", function() {
-    var dropdownContent = this.nextElementSibling;
-    if (dropdownContent.style.display === "block") {
-        dropdownContent.style.display = "none";
-    } else {
-        dropdownContent.style.display = "block";
-    }
-    });
-}
-            
-</script>
+<script src="../static/header.js"></script>
 </body>
 </html>
