--- a/draft/static/login/style.css
+++ b/draft/static/login/style.css
@@ -1,130 +1,66 @@
-body{
-    margin: 0%;
-    overflow: scroll;
-    display: grid;
-    grid-template-rows: auto auto auto;
+html{
+    height: 120%;
 }
-
-div.header{
-    text-align: center;
-    height: 60px;
-}
-
-#title{
-    margin:0px auto;
-    width: auto;
-}
-
-div.login-button{
-    /* position: relative;
-    right: 260px; */
-    /* position: absolute;
-    top: 3px;
-    right: 10px; */
-    /* font-family: 'Courier New', Courier, monospace */
-}
-.rightSide input{
-    border-radius: 3px;
-}
-img#blockly-input{
-    /* position: absolute;
-    right: 300px;
-    top:4px; */
-    z-index: 0;
-}
-
-#password{
-    /* position: absolute;
-    right: 410px;
-    top: 13px; */
-    width: 160px;
-}
-#login{
-    background: rgb(241, 237, 2, 0);
-    color: black;
-    margin-right: 0px;
-    border: 0px;
-}
-.header .leftSide{
-    text-align: left;
-    /* position: absolute;
-    left: 10px; */
-    width: 180px;
-    float: left;
-    overflow: hidden;
-    margin: 10px auto;
-}
-#login-summit{
-    margin: auto;
-}
-
-#email{
-    /* position: absolute;
-    right: 598px; */
-    z-index: 1;
-    top: 13px;
-}
-
-#input-div{
-    width: auto;
-    display: inline-block;
-    /* position: relative;
-    left: 30; */
-}
-
-#right-main{
-    margin-left: 63px;
-}
-/* ------------------------------------------------------ */
-
-.wrapper{
-    display: grid;
-    grid-template-columns: 4fr 3fr ;
-    grid-column-gap: 1px;
-    grid-auto-columns: auto;
-    background-color: black;
-    margin-right: 0px;
-    width: 100%;
-}
-.letter{
-  background-color: #ffffff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-  /* font-size: 70px; */
-  color: black;
-  line-height: 1;
-  font-family: 'hobeaux-rococeaux-background', Helvetica;
-  font-weight: 200;
-  cursor: pointer;
-  transition: all .3s ease;
-}
-.register{
-    grid-row-gap: 1px;
-    width: 100%;
-    
-}
-
-.part{
-    font-size: 25px
-}
-
-.footer{
-    box-sizing: border-box;
-    padding: 10px;
-    width: 100%;
-    background-color: #00adbc;
-    /* height: 60px; */
-    font-size: 12px;
-    grid-row-start:3;
-    grid-row-end: 4;
-}
-
-.footer a{
+a{
     text-decoration: none;
     color: white;
 }
-#copyright{
-    float: right;
+body{
+    height: 100%;
+    margin: 0px;
+    display: grid;
+    grid-template-rows: 70px 76% auto;
+}
+
+.header{
+    height: 100%;
+    background-color: #00adbf;
+    display: grid;
+    grid-template-columns: 2fr 2fr 6fr;
+}
+
+#title{
+    padding:10px;
+    text-align: left;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#login-side{
+    padding: 5px;
+    display: grid;
+    grid-template-columns: 263.4px 275px auto;
+}
+#login-left{
+    background-image: url('./login-left.png');
+    background-repeat: no-repeat;
+}
+#login-right{
+    background-image: url('./login-right.png');
+    background-repeat: no-repeat;
+}
+
+#login-email{
+    width: 180px;
+    margin-left: 68px;
+    margin-top: 6px;
+}
+#login-password{
+    width : 163px;
+    margin-left: 5px;
+    margin-top: 6px;
+}
+#login-side div.form-group{
+    margin-bottom: 0px;
+    display: inline-block;
+}
+
+#normal-button{
+    float:right;
+    margin-top: 6px;
+    margin-right: 10px;
+    background: none;
+    border: none;
+    color: black;
+
 }
