--- a/draft/templates/index/index.html
+++ b/draft/templates/index/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.1.0/i18next.min.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js" ></script>
     <!-- <link rel="stylesheet" href="../static/header.css"> -->
     <link rel="stylesheet" href="../../static/index/style.css">
     <title>Draft-index</title>
@@ -15,27 +17,26 @@
 
     </div>
     <div class="footer">
-        <!-- <div class="left-side">
-            <select name="lang" id="main-lang" style="margin-left: 10px;">
-                <option value="en">English</option>
-                <option value="zh">繁體中文</option>
-            </select>
-        </div> -->
         <div class="mid"></div>
         <div class="right-side">
-            <select name="lang" id="lang-select">
+            <select name="lang" id="language-select">
+                <option selected>Choose other language...</option>
                 <option value="en">English</option>
                 <option value="zh">繁體中文</option>
             </select>
             <div id="copyright-div">
                 <p id="copyright"> 
-                    <a href="">問題回報</a>
-                    <a href="" style="margin-right:10px;">關於我們</a>
+                    <a href="" data-i18n="footer.report"></a>
+                    <a href="" style="margin-right:10px;" data-i18n="footer.aboutus"></a>
                         ©Debugamo
                 </p>
             </div>
         </div>
     </div>
+<script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="../../static/header.js"></script>
 <script src="../../static/index/index.js"></script>
 </body>
