--- a/draft/templates/login/index.html
+++ b/draft/templates/login/index.html
@@ -39,7 +39,8 @@
             a
         </div>
         <div id="register">
-            b
+            <div class="part"></div>
+            <div class="part"></div>
         </div>
     </div>
     <div class="footer">
