finish combining completed javascript with html

--- a/draft/templates/login/index.html
+++ b/draft/templates/login/index.html
@@ -74,13 +74,13 @@
                 </div>
                 <div class="type3" style="padding-right:21px;padding-top:6px;">
                     <label for="birthday" data-i18n="form.birthday">Birthday</label>
-                    <select id="inputYear" class="form-control" name="Year" style="margin-left:4px;">
+                    <select  id="inputDate" class="form-control" name="Date" style="margin-left:4px;">
                         <!-- <option selected>Choose...</option> -->
                     </select>
                     <select id="inputMonth" class="form-control" name='Month' style="margin-left:8px;">
                         <!-- <option selected>Choose...</option> -->
                     </select>
-                    <select id="inputDate" class="form-control" name="Date">
+                    <select id="inputYear" class="form-control" name="Year" >
                         <!-- <option selected>Choose...</option> -->
                     </select>
                 </div>
