--- a/draft/templates/login/index.html
+++ b/draft/templates/login/index.html
@@ -18,17 +18,17 @@
             <a href="/" style="color:white;outline: none;" data-i18n="header.title">Debugamo : 幫幫迪摩</a>
         </div>
         <div class="mid"></div>
-            <form method="POST" action="/user" id="login-side">
+            <form id="login-side">
                 <div id="login-left">
                     <div class="form-group">
-                        <input name="login-email" type="email" class="form-control" id="login-email" aria-describedby="emailHelp" data-i18n="[placeholder]header.login.email">
+                        <input  type="email" class="form-control" id="login-email" aria-describedby="emailHelp" data-i18n="[placeholder]header.login.email">
                     </div>
                 </div>
                 <div id="login-right">
                     <div class="form-group">
-                        <input name="login-password" type="password" class="form-control" id="login-password" data-i18n="[placeholder]header.login.password">
+                        <input type="password" class="form-control" id="login-password" data-i18n="[placeholder]header.login.password">
                     </div>
-                    <button id="normal-button" type="submit" class="btn btn-primary" data-i18n="header.login.button"></button>
+                    <button class="form-button" id="normal-button" type="button" class="btn btn-primary" data-i18n="header.login.button"></button>
                 </div>
                 <div id="fast-login">
                     <!-- fl -->
@@ -39,31 +39,36 @@
         <div id="image">
             a
         </div>
-        <div style="background-image:url('../../static/login/register/register.jpg');background-repeat: no-repeat;">
-            <div id="register" style="width:400px">
+        <div style="background-image:url('../../static/login/register/2.png');background-repeat: no-repeat;">
+            <div id="register" >
                 <div></div>
                 <div id="name"class="type1" style="padding-top:9px;padding-right:25px;">
                     <label for="inputName" data-i18n="form.name.label">Name</label>
                     <input class="form-control" type="text" name="name" id="inputName" data-i18n="[placeholder]form.name.placeholder">
+                    <!-- <div class="notice"></div> -->
                 </div>
                 <div id="ID" class="type2">
                     <label for="inputID" data-i18n="form.ID.label">Game ID</label>
                     <input type="text" class="form-control" id="inputID" data-i18n="[placeholder]form.ID.placeholder" name="ID">
+                    <!-- <div class="notice"></div> -->
                 </div>
                 <div id="Email" class="type2" style="padding-right:22px;">
                     <label for="inputEmail" data-i18n="form.Email.label">Email</label>
                     <input type="email" class="form-control" id="inputEmail" data-i18n="[placeholder]form.Email.placeholder" name="email">
+                    <!-- <div class="notice"></div> -->
                 </div>
                 <div id="password"class="type2" style="padding-right:21px;">
                     <label for="inputPassword" data-i18n="form.password.label" >Password </label>
                     <input type="password" class="form-control" id="inputPassword" data-i18n="[placeholder]form.password.placeholder" name="password">
+                    <!-- <div class="notice"></div> -->
                 </div>
                 <div id="password-again"class="type2" style="padding-right:21px;">
-                    <label for="inputPasswordagain" data-i18n="form.passwordagain.label" style="font-size: 14px;width:90px;margin-top: 0px;">Password Again </label>
+                    <label for="inputPasswordagain" data-i18n="form.passwordagain.label" style="font-size: 14px;width:60px;margin-top: 0px;">Password Again </label>
                     <input type="password" class="form-control" id="inputPasswordagain" data-i18n="[placeholder]form.passwordagain.placeholder"name="password-again" style="background-color:white;">
+                    <!-- <div class="notice"></div> -->
                 </div>
                 <div id="identity"class="type2" style="padding-right:20px;padding-top:7px;">
-                    <label for="inputIdentity" data-i18n="form.identity.label" style="font-size: 16px;width:90px;margin-top: 0px;">Identity</label>
+                    <label for="inputIdentity" data-i18n="form.identity.label" style="font-size: 18px;width:80px;margin-top: 3px;">Identity</label>
                     <!-- <input type="password" class="form-control" id="inputPasswordagain" data-i18n="[placeholder]form.passwordagain.placeholder"name="password-again" style="background-color:white;"> -->
                     <select class="custom-select"name="inputIdentity" id="inputIdentity">
                         <option value="none" data-i18n="form.identity.select.notice">Choose Your Identity</option>
@@ -74,17 +79,21 @@
                 </div>
                 <div class="type3" style="padding-right:21px;padding-top:6px;">
                     <label for="birthday" data-i18n="form.birthday">Birthday</label>
-                    <select  id="inputDate" class="form-control" name="Date" style="margin-left:4px;">
+                    <select id="inputYear" class="form-control" name="Year" style="margin-left:4px;">
                         <!-- <option selected>Choose...</option> -->
                     </select>
                     <select id="inputMonth" class="form-control" name='Month' style="margin-left:8px;">
                         <!-- <option selected>Choose...</option> -->
                     </select>
-                    <select id="inputYear" class="form-control" name="Year" >
+                    <select id="inputDate" class="form-control" name="Date" >
                         <!-- <option selected>Choose...</option> -->
                     </select>
                 </div>
+                <div>
+                    <button class="form-button" id="register-button" type="button" data-i18n="form.button"></button>
+                </div>
             </div>
+            
         </div>
     </div>
     <div class="footer">
